Added the apps new name to the screens where it should be displayed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class=".container">
     <div class="form">
-        <h1 class="text">Realtor App</h1>
+        <h1 class="text">House Hunter</h1>
         <div class="form-container">
             <form action="/user/login" method="POST">
                 <input  type="text" name="user_name" placeholder="Enter your user name">
